--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=psvm-v1
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.generate-ddl=true
 logging.level.org.hibernate.SQL=DEBUG
 spring.datasource.url=jdbc:mariadb://localhost:3306/psvsms
 spring.datasource.username=root
